# ClickerX

./: .gitignore  CMakeLists.txt  README.md  build.sh  changelog.md  constants.py  get_key.py  main.py  mouse_clicker.py  prompts.py  requirements.txt  resources.qrc  vtp.py
build_app/: compile.py  setup.py
include/: ui.hpp
src/: get_key.py  keyboard_clicker.py  main.cpp  main.py  main.qml  mode.py  prompts.py  settings.py  styles.py  terminal.py  ui.cpp  updater.py
src/classes/: key.py  mouse_clicker.py
src/clickers/: keyboard_clicker.py
src/colors/: constants.py  vtp.py
src/components/: NumberField.qml
src/keys/: get_key.py  get_mode.py
